# discord-ferris

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE.md  README.md  env.example.json  full_dump.txt
.github/workflows/: publish.yml
discord-ferris/: Cargo.toml  README.md
discord-ferris-macros/: Cargo.toml  README.md
discord-ferris-macros/src/: lib.rs
discord-ferris/examples/: ferris-example.rs
discord-ferris/examples/events/: message_create.rs  message_reaction_add.rs  ready.rs
discord-ferris/src/: lib.rs
discord-ferris/src/client/: mod.rs
discord-ferris/src/framework/: events.rs  mod.rs  router.rs
discord-ferris/src/gateway/: mod.rs  ws.rs
discord-ferris/src/http/: mod.rs
discord-ferris/src/models/gateway/: mod.rs
discord-ferris/src/models/payloads/: audit_log.rs  interactions.rs  mod.rs  stage_instance.rs  teams.rs  template.rs  user.rs  voice.rs  webhook.rs
discord-ferris/src/models/payloads/_interactions/: base.rs  mod.rs  responses.rs
discord-ferris/src/models/payloads/_interactions/_application_commands/: chat_input.rs  mod.rs
discord-ferris/src/models/payloads/_interactions/_application_commands/_chat_input/: attachment.rs  base.rs  boolean.rs  channel.rs  mentionable.rs  mod.rs  number.rs  role.rs  string.rs  subcommand_group.rs  user.rs
discord-ferris/src/models/rest/: audit_log.rs  channel.rs  emoji.rs  invite.rs  oauth2.rs  soundboard.rs  stage_instance.rs  voice.rs  webhook.rs
discord-ferris/src/models/utils/: mod.rs
discord-ferris/src/structs/: gateway.rs
discord-ferris/src/utils/: log.rs  mod.rs
examples/: ferris-example.rs
examples/events/: message_create.rs  message_reaction_add.rs  mod.rs  ready.rs
src/: lib.rs  log.rs
src/client/: mod.rs
src/core/codec/: dispatch.rs  mod.rs
src/framework/: context.rs  events.rs  log.rs  mod.rs  router.rs
src/gateway/: heartbeat.rs  mod.rs  ws.rs
src/http/: mod.rs
src/models/: LICENSE  README.md  mod.rs
src/models/gateway/: mod.rs
src/models/payloads/: application.rs  audit_log.rs  auto_moderation.rs  channel.rs  common.rs  emoji.rs  gateway.rs  guild.rs  guild_scheduled_event.rs  interactions.rs  invite.rs  mod.rs  monetization.rs  oauth2.rs  permissions.rs  poll.rs  soundboard.rs  stage_instance.rs  sticker.rs  teams.rs  template.rs  user.rs  voice.rs  webhook.rs
src/models/payloads/_interactions/: application_commands.rs  autocomplete.rs  base.rs  message_components.rs  mod.rs  modal_submit.rs  ping.rs  responses.rs
src/models/payloads/_interactions/_application_commands/: chat_input.rs  context_menu.rs  entry_point.rs  internals.rs  mod.rs  permissions.rs
src/models/payloads/_interactions/_application_commands/_chat_input/: attachment.rs  base.rs  boolean.rs  channel.rs  integer.rs  mentionable.rs  mod.rs  number.rs  role.rs  shared.rs  string.rs  subcommand.rs  subcommand_group.rs  user.rs
src/models/rest/: application.rs  audit_log.rs  auto_moderation.rs  channel.rs  common.rs  emoji.rs  gateway.rs  guild.rs  guild_scheduled_event.rs  interactions.rs  invite.rs  mod.rs  monetization.rs  oauth2.rs  poll.rs  soundboard.rs  stage_instance.rs  sticker.rs  template.rs  user.rs  voice.rs  webhook.rs
src/models/utils/: mod.rs
src/models/voice/: mod.rs
src/structs/: colors.rs  gateway.rs  mod.rs
src/utils/: serde.rs
