[package]
name = "discord-ferris"
version = "0.0.1"
edition = "2024"
authors = ["andrewdotdev"]
description = "discord-ferris is a Discord API Rust library under development 🦀"
license = "GPL3"
repository = "https://github.com/andrewdotdev/discord-ferris"
readme = "README.md"

[lib]
path = "src/lib.rs"

[features]
default = []
examples = ["dotenvy"]

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.27.0", features = ["__rustls-tls"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3.31"
anyhow = "1.0.98"
rustls = { version= "0.23.31", features = ["ring"] }
webpki-roots = "1.0.2"
dotenvy = { version = "0.15", optional = true }
thiserror = "2.0.12"
atty = "0.2.14"
time = { version = "0.3.41", features = ["formatting", "local-offset", "macros"]}
async-trait = "0.1.88"
serde_repr = "0.1.20"
bitflags = { version = "2.9.1", features = ["serde"] }
