[workspace]
members = [
  "discord-ferris",
  "discord-ferris-macros",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/andrewdotdev/discord-ferris"
documentation = "https://docs.rs/discord-ferris"
keywords = ["discord", "api", "gateway", "library", "rust"]
categories = ["api-bindings", "asynchronous"]